# 3307_individual_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  vcpkg.json
include/: App.h  FileManagerLogic.h  MainFrame.h
src/: App.cpp  FileManagerLogic.cpp  MainFrame.cpp
